debug: Agregar logs extensivos de traducción - v3.8.3
PROBLEMA: Solo traduce header, módulos y botones quedan en español

DEBUGGING AGREGADO:
1. Logs en updateInterface() para ver cuántos elementos encuentra
2. Logs de cada traducción (key → translation)
3. Listener de evento 'languageChanged' para re-traducir módulos
4. Timeout de 200ms antes de traducir módulos (asegurar DOM listo)

LOGS AGREGADOS:
- translation-system.js línea 142-153: Logs de elementos encontrados y traducciones
- panel-empresa.html línea 287-302: Listener de languageChanged con logs

PRÓXIMO PASO:
Usuario debe:
1. Abrir consola del navegador (F12)
2. Cambiar idioma con el selector
3. Ver en consola cuántos elementos encuentra con [data-translate]
4. Reportar los logs

Con esto sabremos si el problema es:
- Timing (elementos no están en DOM)
- Atributos faltantes
- Traducciones no cargan del JSON

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -284,9 +284,22 @@
                                     // 🌍 TRADUCIR MÓDULOS DESPUÉS DE CARGARLOS
                                     console.log('🌍 [TRANSLATION] Traduciendo módulos dinámicos...');
                                     if (window.translator) {
-                                        window.translator.updateInterface();
-                                        console.log('✅ [TRANSLATION] Módulos traducidos');
+                                        setTimeout(() => {
+                                            window.translator.updateInterface();
+                                            console.log('✅ [TRANSLATION] Módulos traducidos');
+                                        }, 200);
                                     }
+
+                                    // 🌍 AGREGAR LISTENER PARA CAMBIOS DE IDIOMA
+                                    window.addEventListener('languageChanged', async function(event) {
+                                        console.log('🌍 [TRANSLATION] Idioma cambiado a:', event.detail.language);
+                                        setTimeout(() => {
+                                            if (window.translator) {
+                                                console.log('🌍 [TRANSLATION] Re-traduciendo módulos...');
+                                                window.translator.updateInterface();
+                                            }
+                                        }, 300);
+                                    });
 
                                     // DEFINIR FUNCIÓN GLOBAL PARA ABRIR MÓDULOS
                                     window.openModuleDirect = function(moduleId, moduleName) {
