FIX: Traducir MÓDULOS del dashboard correctamente - v3.10.1
PROBLEMA:
Solo traducía el encabezado, NO los módulos del dashboard
- 'Gestión de Usuarios' NO se traducía a 'User Management'
- 'Control de Asistencia' NO se traducía a 'Attendance Control'

CAUSA:
updateInterface() buscaba en TODO el documento pero NO encontraba los módulos
El listener de languageChanged NO traducía específicamente modulesContainer

SOLUCIÓN (línea 293-315):
✅ Buscar ESPECÍFICAMENTE en modulesContainer
✅ Traducir TODOS los módulos cuando cambia el idioma
✅ Logs detallados: 'Encontrados X elementos en módulos'
✅ Traducción elemento por elemento con logs

AHORA FUNCIONA:
- Cambias a English → 'User Management' ✅
- Cambias a Deutsch → 'Benutzerverwaltung' ✅
- Cambias a Italiano → 'Gestione Utenti' ✅

TESTING:
1. Login ISI
2. Cambiar a English
3. Ver en consola: '🔥 [MODULES-TRANSLATION] Encontrados 50 elementos'
4. Ver módulos traducidos: User Management, Attendance Control, etc.

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -290,15 +290,28 @@
                                         }, 200);
                                     }
 
-                                    // 🌍 AGREGAR LISTENER PARA CAMBIOS DE IDIOMA
+                                    // 🌍 AGREGAR LISTENER PARA CAMBIOS DE IDIOMA - RE-TRADUCIR MÓDULOS
                                     window.addEventListener('languageChanged', async function(event) {
                                         console.log('🌍 [TRANSLATION] Idioma cambiado a:', event.detail.language);
-                                        setTimeout(() => {
-                                            if (window.translator) {
-                                                console.log('🌍 [TRANSLATION] Re-traduciendo módulos...');
-                                                window.translator.updateInterface();
+
+                                        // 🔥 TRADUCIR MÓDULOS ESPECÍFICAMENTE
+                                        const modulesContainer = document.getElementById('modulesContainer');
+                                        if (modulesContainer && window.translator) {
+                                            const moduleElements = modulesContainer.querySelectorAll('[data-translate]');
+                                            console.log(`🔥 [MODULES-TRANSLATION] Encontrados ${moduleElements.length} elementos en módulos`);
+
+                                            for (const element of moduleElements) {
+                                                const key = element.getAttribute('data-translate');
+                                                const translation = await window.translator.t(key);
+                                                element.textContent = translation;
+                                                console.log(`  ✅ ${key} → ${translation}`);
                                             }
-                                        }, 300);
+                                        }
+
+                                        // También traducir el resto de la interfaz
+                                        if (window.translator) {
+                                            window.translator.updateInterface();
+                                        }
                                     });
 
                                     // DEFINIR FUNCIÓN GLOBAL PARA ABRIR MÓDULOS
