FIX: Traducir tarjetas del dashboard al cargar - v3.10.2
PROBLEMA EXACTO:
- Dentro del módulo usuarios: Botones traducidos ✅
- Tarjetas del dashboard: NO traducidas ❌
  ('Gestión de Usuarios' no cambia a 'User Management')

CAUSA:
Traducción solo aplicaba cuando CAMBIABAS el idioma
NO traducía al CARGAR los módulos la primera vez

SOLUCIÓN (línea 284-300):
✅ Traducir INMEDIATAMENTE después de modulesContainer.innerHTML
✅ Buscar específicamente en modulesContainer
✅ Traducir elemento por elemento
✅ Logs detallados de progreso

AHORA:
1. Cargas dashboard → Módulos en idioma seleccionado
2. Cambias idioma → Módulos se re-traducen

TESTING:
1. Login ISI (país Argentina → inicia en Español)
2. Ver consola: '🔥 [DASHBOARD] Encontrados 50 elementos'
3. Ver tarjetas en español: 'Gestión de Usuarios'
4. Cambiar a English
5. Ver tarjetas traducidas: 'User Management'

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -281,13 +281,22 @@
                                     html += '</div>';
                                     modulesContainer.innerHTML = html;
 
-                                    // 🌍 TRADUCIR MÓDULOS DESPUÉS DE CARGARLOS
-                                    console.log('🌍 [TRANSLATION] Traduciendo módulos dinámicos...');
+                                    // 🔥 TRADUCIR MÓDULOS INMEDIATAMENTE DESPUÉS DE CARGARLOS
+                                    console.log('🔥 [TRANSLATION] Traduciendo módulos dinámicos del dashboard...');
                                     if (window.translator) {
-                                        setTimeout(() => {
-                                            window.translator.updateInterface();
-                                            console.log('✅ [TRANSLATION] Módulos traducidos');
-                                        }, 200);
+                                        setTimeout(async () => {
+                                            const moduleElements = modulesContainer.querySelectorAll('[data-translate]');
+                                            console.log(`🔥 [DASHBOARD] Encontrados ${moduleElements.length} elementos para traducir`);
+
+                                            for (const element of moduleElements) {
+                                                const key = element.getAttribute('data-translate');
+                                                const translation = await window.translator.t(key);
+                                                element.textContent = translation;
+                                                console.log(`  ✅ ${key} → ${translation}`);
+                                            }
+
+                                            console.log('✅ [TRANSLATION] Módulos del dashboard traducidos');
+                                        }, 300);
                                     }
 
                                     // 🌍 AGREGAR LISTENER PARA CAMBIOS DE IDIOMA - RE-TRADUCIR MÓDULOS
