FIX TOTAL: Agregar campo icon a API + Completar iconMap
Dos fixes en este commit:

1. API RETORNA ICONOS (aponntDashboard.js):
   - Agregar sm.icon al SELECT de /companies/:id/modules
   - Agregar icon al objeto de respuesta JSON
   - Ahora la API retorna el campo icon de la base de datos

2. ICONMAP COMPLETO (panel-empresa.html):
   - Agregar TODOS los moduleKey faltantes al iconMap
   - Corregir 'inbox' → 'notifications-inbox'
   - Nuevos: access-control, clientes, facturacion, plantillas-fiscales,
     google-maps-integration, licensing-management, vacation-management,
     sanctions-management, notifications-complete

Resultado: Todos los iconos deberían mostrarse correctamente

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -4455,7 +4455,7 @@
                     { id: 'departments', name: 'Departamentos', icon: '🏢' },
                     { id: 'kiosks', name: 'Kioscos', icon: '📟' },
                     { id: 'visitors', name: 'Visitantes', icon: '👥' },
-                    { id: 'inbox', name: 'Bandeja Notificaciones', icon: '📬' },
+                    { id: 'notifications-inbox', name: 'Bandeja Notificaciones', icon: '📬' },
                     { id: 'shifts', name: 'Turnos', icon: '🕐' },
                     { id: 'attendance', name: 'Asistencia', icon: '📋' },
                     { id: 'facial-biometric', name: 'Biometría Analítica', icon: '🎭' },
@@ -4469,18 +4469,21 @@
                     { id: 'resource-center', name: 'Centro Recursos', icon: '📊' },
                     { id: 'proactive-notifications', name: 'Alertas Proactivas', icon: '🔔' },
                     { id: 'audit-reports', name: 'Reportes Auditoría', icon: '📄' },
-                    { id: 'network', name: 'Red de Atención', icon: '🏥' },
                     { id: 'settings', name: 'Configuración', icon: '⚙️' },
-                    { id: 'medical-config', name: 'Config. Médico', icon: '⚕️' },
-                    { id: 'fehaciente-consent', name: 'Consents Fehacientes', icon: '✍️' },
                     { id: 'terms-conditions', name: 'Términos y Condiciones', icon: '📜' },
-                    { id: 'absence-notifications', name: 'Notif. Ausencias', icon: '📢' },
                     { id: 'employee-map', name: 'Mapa Empleados', icon: '🗺️' },
                     { id: 'training-management', name: 'Gestión Capacitaciones', icon: '📚' },
-                    { id: 'notifications', name: 'Notificaciones', icon: '🔔' },
+                    { id: 'notifications-complete', name: 'Notificaciones', icon: '🔔' },
                     { id: 'job-postings', name: 'Avisos de Empleo', icon: '💼' },
                     { id: 'payroll-liquidation', name: 'Liquidación Sueldos', icon: '💰' },
-                    { id: 'emotional-analysis', name: 'Análisis Emocional', icon: '😊' }
+                    { id: 'vacation-management', name: 'Gestión de Vacaciones', icon: '🏖️' },
+                    { id: 'sanctions-management', name: 'Gestión de Sanciones', icon: '⚖️' },
+                    { id: 'access-control', name: 'Control de Acceso', icon: '🔐' },
+                    { id: 'clientes', name: 'Clientes SIAC', icon: '👥' },
+                    { id: 'facturacion', name: 'Facturación SIAC', icon: '💵' },
+                    { id: 'plantillas-fiscales', name: 'Plantillas Fiscales', icon: '📋' },
+                    { id: 'google-maps-integration', name: 'Google Maps', icon: '🗺️' },
+                    { id: 'licensing-management', name: 'Licencias', icon: '📜' }
                 ];
 
                 const iconMap = {};
