--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -2000,13 +2000,16 @@
     <script src="js/modules/terms-conditions.js"></script>
     <script src="js/modules/biometric-consent.js"></script>
 
-    <!-- Sistema de Notificaciones Avanzado V2.0 -->
+    <!-- Sistema de Notificaciones Avanzado V2.0 - CARGA DINÁMICA -->
+    <!-- Scripts cargados bajo demanda por loadModuleContent() -->
+    <!--
     <script src="js/modules/notifications-inbox.js"></script>
     <script src="js/modules/compliance-dashboard.js"></script>
     <script src="js/modules/sla-tracking.js"></script>
     <script src="js/modules/resource-center.js"></script>
     <script src="js/modules/proactive-notifications.js"></script>
     <script src="js/modules/audit-reports.js"></script>
+    -->
 
     <!-- Geolocation & Mapping -->
     <script src="js/modules/google-maps-integration.js"></script>
