FIX TOTAL: Eliminar carga doble de TODOS los módulos dinámicos (23 módulos)

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1950,6 +1950,8 @@
     <!-- ✅ CORE SYSTEM MODULES RESTAURADOS - TODOS LOS 43 MÓDULOS -->
     <!-- Core System -->
     <script src="js/modules/dashboard.js"></script>
+    <!-- CARGA DINÁMICA - Comentados para evitar doble carga -->
+    <!--
     <script src="js/modules/users.js"></script>
     <script src="js/modules/departments.js"></script>
     <script src="js/modules/kiosks.js"></script>
@@ -1958,6 +1960,7 @@
     <script src="js/modules/settings.js"></script>
     <script src="js/modules/attendance.js"></script>
     <script src="js/modules/shifts.js"></script>
+    -->
 
     <!-- Authentication & Security Modules -->
     <script src="js/modules/access-control.js"></script>
@@ -1974,30 +1977,30 @@
     <script src="js/modules/biometric.js"></script>
     <script src="js/modules/biometric-simple.js"></script>
     <script src="js/modules/evaluacion-biometrica.js"></script>
-    <script src="js/modules/emotional-analysis.js"></script>
+    <!-- <script src="js/modules/emotional-analysis.js"></script> --> <!-- CARGA DINÁMICA -->
     <!-- biometric-verification.js y facial-biometric.js unificados en biometric.js -->
     <!-- biometric-simple.js: Sistema profesional con captura automática y feedback Azure -->
 
     <!-- Medical & Health Modules -->
-    <script src="js/modules/medical-dashboard.js"></script>
+    <!-- <script src="js/modules/medical-dashboard.js"></script> --> <!-- CARGA DINÁMICA -->
     <script src="js/modules/psychological-assessment.js"></script>
 
     <!-- HR Management Modules -->
-    <script src="js/modules/training-management.js"></script>
+    <!-- <script src="js/modules/training-management.js"></script> --> <!-- CARGA DINÁMICA -->
     <script src="js/modules/sanctions-management.js"></script>
     <script src="js/modules/vacation-management.js"></script>
-    <script src="js/modules/payroll-liquidation.js"></script>
-    <script src="js/modules/job-postings.js"></script>
+    <!-- <script src="js/modules/payroll-liquidation.js"></script> --> <!-- CARGA DINÁMICA -->
+    <!-- <script src="js/modules/job-postings.js"></script> --> <!-- CARGA DINÁMICA -->
 
     <!-- Notification Systems -->
-    <script src="js/modules/notifications-complete.js"></script>
+    <!-- <script src="js/modules/notifications-complete.js"></script> --> <!-- CARGA DINÁMICA como 'notifications' -->
 
     <!-- Legal & Compliance Modules -->
-    <script src="js/modules/legal-dashboard.js"></script>
-    <script src="js/modules/document-management.js"></script>
+    <!-- <script src="js/modules/legal-dashboard.js"></script> --> <!-- CARGA DINÁMICA -->
+    <!-- <script src="js/modules/document-management.js"></script> --> <!-- CARGA DINÁMICA -->
     <script src="js/modules/licensing-management.js"></script>
-    <script src="js/modules/art-management.js"></script>
-    <script src="js/modules/terms-conditions.js"></script>
+    <!-- <script src="js/modules/art-management.js"></script> --> <!-- CARGA DINÁMICA -->
+    <!-- <script src="js/modules/terms-conditions.js"></script> --> <!-- CARGA DINÁMICA -->
     <script src="js/modules/biometric-consent.js"></script>
 
     <!-- Sistema de Notificaciones Avanzado V2.0 - CARGA DINÁMICA -->
@@ -2013,7 +2016,7 @@
 
     <!-- Geolocation & Mapping -->
     <script src="js/modules/google-maps-integration.js"></script>
-    <script src="js/modules/employee-map.js"></script>
+    <!-- <script src="js/modules/employee-map.js"></script> --> <!-- CARGA DINÁMICA -->
 
     <!-- Testing & Permissions -->
     <!-- <script src="js/modules/permissions-test.js"></script> --> <!-- Archivo no existe, comentado para evitar 404 -->
