FORCE HTML UPDATE: Agregar nota anti-carga estática en comentarios V2.0
Este cambio fuerza a Render a actualizar el archivo HTML.
El commit 5b488f1 ya tenía los scripts comentados pero Render no lo desplegó.

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -2004,7 +2004,7 @@
     <script src="js/modules/biometric-consent.js"></script>
 
     <!-- Sistema de Notificaciones Avanzado V2.0 - CARGA DINÁMICA -->
-    <!-- Scripts cargados bajo demanda por loadModuleContent() -->
+    <!-- Scripts cargados bajo demanda por loadModuleContent() - NO CARGAR ESTÁTICAMENTE -->
     <!--
     <script src="js/modules/notifications-inbox.js"></script>
     <script src="js/modules/compliance-dashboard.js"></script>
