FEAT COMPLETE: Sistema Plug & Play Frontend + FIX PERFORMANCE Módulo Usuarios
📊 RESUMEN DE CAMBIOS:

1️⃣ SISTEMA PLUG & PLAY FRONTEND (NUEVO)
   ✅ Creado public/js/core/moduleHelper.js (173 líneas)
      - Frontend helper para verificar módulos activos
      - Cache de 5 minutos para reducir llamadas API
      - Funciones principales:
        * getActiveModules() - Obtiene módulos operacionales
        * isModuleActive(moduleKey) - Verifica módulo específico
        * checkMultipleModules(moduleKeys) - Verifica múltiples
        * applyModuleVisibility() - Auto-oculta elementos data-module
        * invalidateModuleCache() - Refresca cache
        * getModuleConfiguration(moduleKey) - Obtiene config
      - Exportado globalmente: window.moduleHelper

   ✅ API Endpoint Backend: /api/v1/company-modules/active
      - Agregado en src/routes/companyModuleRoutes.js:186
      - Middleware: simpleAuth (JWT authentication)
      - Retorna SOLO módulos operacionales:
        * is_active = true
        * expires_at > NOW() o NULL
        * suspended_at IS NULL
      - Campos: moduleKey, moduleName, category, icon, color, configuration, dates
      - Response: { success, modules[], count }

   ✅ Integrado en panel-empresa.html
      - Script cargado en línea 2003 (ANTES de módulos)
      - Orden correcto: Core helpers → Módulos → Funciones

2️⃣ MÓDULO USUARIOS - INTEGRACIÓN PLUG & PLAY
   ✅ public/js/modules/users.js v6.0
      - Versionado: v5.0 → v6.0 (Plug & Play integrado)

      - CONFIGURACIÓN DE FEATURES (líneas 8-15):
        * biometric-verification → biometric-enterprise
        * shift-assignment → shifts-enterprise
        * bulk-actions → users-advanced
        * export-csv → reports-advanced
        * user-stats → analytics-basic

      - BOTONES QUICK-ACTIONS con data-module (líneas 29-31):
        * 📊 Estadísticas → data-module="analytics-basic"
        * 📤 Exportar CSV → data-module="reports-advanced"
        * ⚡ Acciones Masivas → data-module="users-advanced"

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1997,7 +1997,10 @@
             <!-- Content will be loaded progressively -->
         </div>
     </div>
-    
+
+
+    <!-- 🔌 CORE PLUG & PLAY SYSTEM - Module Helper -->
+    <script src="js/core/moduleHelper.js"></script>
 
     <!-- ✅ CORE SYSTEM MODULES RESTAURADOS - TODOS LOS 43 MÓDULOS -->
     <!-- Core System -->
