FEAT COMPLETE: Sistema de Auditoría y Auto-Diagnóstico V1.0
🎯 OBJETIVO CUMPLIDO:
Sistema completo de auditoría automatizada, testing, generación de datos
y auto-reparación híbrida para arquitectura multi-tenant modular.

📦 BACKEND COMPLETO (9 archivos nuevos):

1️⃣ src/models/AuditLog.js (350+ líneas)
   ✅ Modelo Sequelize con JSONB para máxima flexibilidad
   ✅ Campos completos: execution_id, test_type, error tracking, fix metadata
   ✅ Métodos: markAsCompleted, addError, recordFix, getExecutionSummary
   ✅ Soporta: endpoint, database, integration, e2e, performance, security tests

2️⃣ src/auditor/core/AuditorEngine.js (400+ líneas)
   ✅ Orchestrador principal con EventEmitter para real-time updates
   ✅ 4 fases: Recolección → Análisis → Auto-Healing → Reporte
   ✅ Execution tracking con UUID
   ✅ runFullAudit() y runModuleAudit()
   ✅ Parallel execution con Promise.allSettled

3️⃣ src/auditor/registry/SystemRegistry.js (500+ líneas)
   ✅ CEREBRO DEL SISTEMA - Auto-conocimiento completo
   ✅ canModuleWork() - Verifica dependencias activas
   ✅ analyzeDeactivationImpact() - Impacto de desactivar módulo
   ✅ suggestBundles() - Sugerencias comerciales inteligentes
   ✅ validateCompanyModules() - Coherencia multi-tenant

4️⃣ src/auditor/registry/modules-registry.json (365+ líneas)
   ✅ Registry completo de 12 módulos del sistema
   ✅ Metadata: id, name, category, version, description
   ✅ Dependencies: required, optional, integrates_with, provides_to
   ✅ Commercial: is_core, standalone, suggested_bundles
   ✅ API endpoints, database tables, business flows

5️⃣ src/auditor/collectors/EndpointCollector.js (200+ líneas)
   ✅ Tests automáticos de TODOS los API endpoints
   ✅ Verifica: status codes, response times, authentication
   ✅ Logs detallados a AuditLog
   ✅ Usa SystemRegistry para obtener endpoints

6️⃣ src/auditor/collectors/DatabaseCollector.js (150+ líneas)
   ✅ Tests de integridad de base de datos
   ✅ Verifica: conexión, tablas, relaciones, constraints
   ✅ D

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -421,6 +421,28 @@
                                                         alert('Módulo settings: función no encontrada');
                                                     }
                                                     break;
+                                                case 'auditor-dashboard':
+                                                case 'auditor':
+                                                    // Cargar módulo del auditor
+                                                    loadModuleContent('auditor-dashboard').then(() => {
+                                                        // Ocultar grid de módulos
+                                                        const moduleGrid = document.querySelector('.module-grid');
+                                                        if (moduleGrid) moduleGrid.style.display = 'none';
+                                                        // Mostrar contenido principal
+                                                        const mainContent = document.getElementById('mainContent');
+                                                        if (mainContent) mainContent.style.display = 'block';
+                                                        // Llamar a función del auditor
+                                                        if (typeof showAuditorContent === 'function') {
+                                                            showAuditorContent();
+                                                        } else {
+                                                            console.error('❌ [AUDITOR] showAuditorContent no está disponible');
+                                                            alert('Módulo Auditor: función no encontrada');
+                                                        }
+                                                    }).catch(error => {
+                                                        console.error('❌ [AUDITOR] Error cargando módulo:', error);
+                                                        alert('Error cargando módulo Auditor');
+                                                    });
+                                                    break;
                                                 case 'compliance-dashboard':
                                                 case 'compliance_dashboard':
                                                     if (typeof ComplianceDashboard !== 'undefined' && ComplianceDashboard.init) {
@@ -4592,6 +4614,28 @@
                 });
 
                 html += '</div>';
+
+                // AGREGAR MÓDULOS DEL SISTEMA (solo para admins)
+                if (window.currentUser && window.currentUser.role === 'admin') {
+                    html += `
+                        <div style="padding: 20px 20px 0 20px;">
+                            <h3 style="margin: 20px 0 10px 0; color: #667eea; font-size: 14px; text-transform: uppercase; font-weight: 600;">
+                                ⚙️ Módulos del Sistema
+                            </h3>
+                            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
+                                <div onclick="window.openModuleDirect('auditor-dashboard', 'Auditoría y Auto-Diagnóstico')"
+                                     style="border: 1px solid #ddd; border-radius: 8px; padding: 15px; text-align: center; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; cursor: pointer; transition: all 0.3s; box-shadow: 0 2px 4px rgba(102, 126, 234, 0.3);"
+                                     onmouseover="this.style.boxShadow='0 6px 12px rgba(102, 126, 234, 0.5)'; this.style.transform='translateY(-3px)'"
+                                     onmouseout="this.style.boxShadow='0 2px 4px rgba(102, 126, 234, 0.3)'; this.style.transform='translateY(0)'">
+                                    <div style="font-size: 32px; margin-bottom: 10px;">🔍</div>
+                                    <div style="font-weight: bold; margin-bottom: 5px; font-size: 15px;">Auditor y Auto-Diagnóstico</div>
+                                    <div style="font-size: 11px; opacity: 0.9;">Sistema de auditoría, testing y auto-reparación</div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                }
+
                 modulesContainer.innerHTML = html;
 
                 console.log(`✅ [MODULES] ${modules.length} módulos de empresa ${selectedCompany.name} mostrados exitosamente`);
@@ -4999,6 +5043,9 @@
                 } else if (tabName === 'notifications-enterprise') {
                     script.src = `js/modules/notifications-enterprise.js?v=${cacheBuster}`;
                     console.log(`📦 [PROGRESSIVE] Cargando NOTIFICATIONS ENTERPRISE V3.0`);
+                } else if (tabName === 'auditor-dashboard' || tabName === 'auditor') {
+                    script.src = `js/modules/auditor-dashboard.js?v=${cacheBuster}`;
+                    console.log(`📦 [PROGRESSIVE] Cargando AUDITOR DASHBOARD - Sistema Auto-Diagnóstico`);
                 } else {
                     script.src = `js/modules/${tabName}.js?v=${cacheBuster}`;
                 }
