FEAT COMPLETE: Sistema de Asistente IA con Ollama + Llama 3.1 (8B) Local
🤖 SISTEMA 100% IMPLEMENTADO - IA Local sin costos mensuales

## 📊 COMPONENTES IMPLEMENTADOS:

### 1️⃣ BASE DE DATOS ✅
- migrations/20250119_create_assistant_knowledge_base.sql
  • Tabla assistant_knowledge_base con 8 índices optimizados
  • 2 funciones PostgreSQL: search_similar_answers(), get_assistant_stats()
  • Soporte para RAG (Retrieval Augmented Generation)
  • Multi-tenant con aislación por company_id
  • Feedback system (👍👎)
  • Aprendizaje progresivo (reused_count, improved_answer)
  • Full-text search en español
  • JSONB para contexto flexible

### 2️⃣ BACKEND - SERVICIO IA ✅
- src/services/AssistantService.js (800+ líneas)
  • Integración con Ollama (LLM local)
  • RAG: Búsqueda en knowledge base + contexto enriquecido
  • Context-aware: Detecta módulo actual del usuario
  • Auto-diagnóstico: Ejecuta AuditorEngine si detecta problemas
  • Sistema de feedback para aprendizaje
  • Fallback inteligente si Ollama no disponible
  • Health check de Ollama
  • Estadísticas de uso

### 3️⃣ BACKEND - API REST ✅
- src/routes/assistantRoutes.js
  • POST /api/assistant/chat - Enviar pregunta
  • POST /api/assistant/feedback - Registrar feedback (👍👎)
  • GET /api/assistant/history - Historial conversaciones
  • GET /api/assistant/stats - Estadísticas de uso
  • GET /api/assistant/health - Estado de Ollama
  • GET /api/assistant/:id - Detalle de conversación
  • JWT authentication
  • Multi-tenant security

### 4️⃣ BACKEND - MODELO SEQUELIZE ✅
- src/models/AssistantKnowledgeBase.js
  • Modelo completo con validaciones
  • Registrado en src/config/database.js
  • Exportado para uso en toda la app

### 5️⃣ FRONTEND - CHAT FLOTANTE ✅
- public/js/modules/ai-assistant-chat.js (1,100+ líneas)
  • Botón flotante (bottom-right) con animación pulse
  • Ventana de chat moderna con gradients
  • Tech stack badges VISIBLES:
    - 🧠 Ollama + Llama 3.1
    - ⚡ Node.js
    - 🐘 PostgreSQL
    - 📚 RAG
  • Mensaj

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -6811,6 +6811,9 @@
         window.addEventListener('orientationchange', closeMobileSidebar);
     </script>
 
+    <!-- ✅ ASISTENTE IA - Ollama + Llama 3.1 (Chat Flotante con Tech Badges) -->
+    <script src="js/modules/ai-assistant-chat.js"></script>
+
     <!-- Bootstrap 5 JavaScript Bundle (incluye Popper.js para modales) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
